--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@100..900&family=Lexend+Deca:wght@100..900&display=swap" rel="stylesheet">
 </head>
 <body>
-  
+  <main class="container">
+
+  </main>
 </body>
 </html>
