Add sections for sedans, SUVs, and luxury cars in index.html and style them in styles.css

--- a/index.html
+++ b/index.html
@@ -12,7 +12,15 @@
 </head>
 <body>
   <main class="container">
+    <section class="sedans">
 
+    </section>
+    <section class="suv">
+
+    </section>
+    <section class="luxury">
+      
+    </section>
   </main>
 </body>
 </html>
