Add icons for sedans, SUVs, and luxury cars in index.html and style icon sections in styles.css

--- a/index.html
+++ b/index.html
@@ -13,13 +13,31 @@
 <body>
   <main class="container">
     <section class="sedans">
+      <div class="icon-section">
+        <picture>
+          <source srcset="./images/icon-sedans.svg" type="image/svg+xml">
+          <img src="./images/icon-sedans.svg" alt="icon of a sedan.">
+        </picture>
+      </div>
 
     </section>
     <section class="suv">
+      <div class="icon-section">
+        <picture>
+          <source srcset="./images/icon-suvs.svg" type="image/svg+xml">
+          <img src="./images/icon-suvs.svg" alt="icon of a suv.">
+        </picture>
+      </div>
 
     </section>
     <section class="luxury">
-      
+      <div class="icon-section">
+        <picture>
+          <source srcset="./images/icon-luxury.svg" type="image/svg+xml">
+          <img src="./images/icon-luxury.svg" alt="icon of a luxury car.">
+        </picture>
+      </div>
+
     </section>
   </main>
 </body>
