Refactor sedan, SUV, and luxury sections in index.html; add text sections and style updates in styles.css

--- a/index.html
+++ b/index.html
@@ -13,30 +13,40 @@
 <body>
   <main class="container">
     <section class="sedans">
-      <div class="icon-section">
+      <section class="icon-section">
         <picture>
           <source srcset="./images/icon-sedans.svg" type="image/svg+xml">
           <img src="./images/icon-sedans.svg" alt="icon of a sedan.">
         </picture>
-      </div>
+      </section>
+      <section class="text-section">
+        <h2 class="text-preset-1">Sedans</h2>
+        <article class="text-preset-2">
+          Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city or on your next road trip.
+        </article>
+        <div class="btn">
+          <a class="text-preset-2 orange-text" href="#">Learn More</a>
+        </div>
+
+      </section>
 
     </section>
     <section class="suv">
-      <div class="icon-section">
+      <section class="icon-section">
         <picture>
           <source srcset="./images/icon-suvs.svg" type="image/svg+xml">
           <img src="./images/icon-suvs.svg" alt="icon of a suv.">
         </picture>
-      </div>
+      </section>
 
     </section>
     <section class="luxury">
-      <div class="icon-section">
+      <section class="icon-section">
         <picture>
           <source srcset="./images/icon-luxury.svg" type="image/svg+xml">
           <img src="./images/icon-luxury.svg" alt="icon of a luxury car.">
         </picture>
-      </div>
+      </section>
 
     </section>
   </main>
