--- a/index.html
+++ b/index.html
@@ -27,9 +27,7 @@
         <div class="btn">
           <a class="text-preset-2 orange-text" href="#">Learn More</a>
         </div>
-
       </section>
-
     </section>
     <section class="suv">
       <section class="icon-section">
@@ -38,7 +36,15 @@
           <img src="./images/icon-suvs.svg" alt="icon of a suv.">
         </picture>
       </section>
-
+      <section class="text-section">
+        <h2 class="text-preset-1">Suvs</h2>
+        <article class="text-preset-2">
+          Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation and off-road adventures.
+        </article>
+        <div class="btn">
+          <a class="text-preset-2 b-g-text" href="#">Learn More</a>
+        </div>
+      </section>
     </section>
     <section class="luxury">
       <section class="icon-section">
@@ -47,7 +53,15 @@
           <img src="./images/icon-luxury.svg" alt="icon of a luxury car.">
         </picture>
       </section>
-
+      <section class="text-section">
+        <h2 class="text-preset-1">Luxury</h2>
+        <article class="text-preset-2">
+          Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury rental and arrive in style. 
+        </article>
+        <div class="btn">
+          <a class="text-preset-2 green-text" href="#">Learn More</a>
+        </div>
+      </section>
     </section>
   </main>
 </body>
